--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col">
 
-        <form autocomplete="off">
+        <form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSubmit()">
 
             <!-- Nombre -->
             <div class="row mb-3">
@@ -12,11 +12,16 @@
                 <div class="col-sm-9">
                     <input type="text"
                            class="form-control"
-                           placeholder="Nombre del usuario">
+                           placeholder="Nombre del usuario"
+                           formControlName = "name">
 
-                    <span class="form-text text-danger">
-                        Debe de ser en formato de nombre y apellido
-                    </span>
+                    @if (formServices.isValidField(myForm, 'name')) {
+
+                      <span class="form-text text-danger">
+                        {{formServices.getErrorMessage(myForm, 'name')}}
+                      </span>
+                    }
+
                 </div>
             </div>
 
@@ -26,10 +31,15 @@
                 <div class="col-sm-9">
                     <input type="email"
                            class="form-control"
-                           placeholder="Email del usuario">
-                    <span class="form-text text-danger">
-                        mensaje de error del email
-                    </span>
+                           placeholder="Email del usuario"
+                           formControlName = "email">
+
+                    @if (formServices.isValidField(myForm, 'email')) {
+                      <span class="form-text text-danger">
+                        El email es invalido
+                      </span>
+                    }
+
                 </div>
             </div>
 
@@ -39,10 +49,16 @@
                 <div class="col-sm-9">
                     <input type="text"
                            class="form-control"
-                           placeholder="Nombre código del usuario">
-                    <span class="form-text text-danger">
-                         El username no puede ser Strider
-                    </span>
+                           placeholder="Nombre código del usuario"
+                           formControlName = "username">
+
+
+                    @if (formServices.isValidField(myForm, 'username')) {
+
+                      <span class="form-text text-danger">
+                        {{formServices.getErrorMessage(myForm, 'username')}}
+                      </span>
+                    }
                 </div>
             </div>
 
@@ -52,11 +68,15 @@
                 <div class="col-sm-9">
                     <input type="password"
                            class="form-control"
-                           placeholder="Password de su cuenta">
+                           placeholder="Password de su cuenta"
+                           formControlName = "password">
 
-                    <span class="form-text text-danger">
-                         La contraseña debe de ser mayor de 6 caracteres.
-                    </span>
+                    @if (formServices.isValidField(myForm, 'password')) {
+
+                      <span class="form-text text-danger">
+                        {{formServices.getErrorMessage(myForm, 'password')}}
+                      </span>
+                    }
                 </div>
             </div>
 
@@ -66,11 +86,20 @@
                 <div class="col-sm-9">
                     <input type="password"
                            class="form-control"
-                           placeholder="Confirmar la contraseña">
+                           placeholder="Confirmar la contraseña"
+                           formControlName = "password2">
+                      @if
+                      (
+                        formServices.isValidField(myForm, 'password2') ||
+                        myForm.controls['password'].value !== myForm.controls['password2'].value
+                      )
+                      {
 
-                    <span class="form-text text-danger">
-                         Las contraseñas deben de ser iguales
-                    </span>
+                        <span class="form-text text-danger">
+                          Las contraseñas deben de ser iguales
+                        </span>
+                      }
+
                 </div>
             </div>
 
@@ -78,7 +107,9 @@
             <div class="row">
                 <div class="col">
                     <button class="btn btn-primary float-end"
-                            type="submit">
+                            type="submit"
+                            (click)="onSubmit()"
+                            (keydown)="onSubmit()">
                         Crear
                     </button>
                 </div>
@@ -90,24 +121,34 @@
 </div>
 
 
-<h2>Form Valid: </h2>
-<h2>Form Status: </h2>
-<h2>Form Pending: </h2>
-<h2>Form errors</h2>
+<h5>Form Valid: </h5>
+<pre>{{ myForm.valid }}</pre>
+
+<h5>Form Status: </h5>
+<pre>{{ myForm.status| json }}</pre>
+
+<h5>Form Pending: </h5>
+<pre>{{ myForm.pristine| json }}</pre>
+
+<h5>Form errors</h5>
+<pre>{{ myForm.errors| json }}</pre>
+
 <pre>{{ 'formulario' | json }}</pre>
 
 <h5>Nombre</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ myForm.controls['name'].value | json }}</pre>
 
 <h5>Email</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ myForm.controls['email'].value | json }}</pre>
+<pre>{{ myForm.controls['email'].errors| json }}</pre>
+
 
 <h5>Username</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ myForm.controls['username'].value | json }}</pre>
 
 
 <h5>Password</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ myForm.controls['password'].value | json }}</pre>
 
 <h5>Confirmar</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<pre>{{ myForm.controls['password2'].value | json }}</pre>
