--- a/src/app/reactive/pages/dinamic-page/dinamic-page.component.html
+++ b/src/app/reactive/pages/dinamic-page/dinamic-page.component.html
@@ -1,17 +1,22 @@
 <h2>Reactivos: <small> Dinámicos </small></h2>
 <hr>
 
-<form autocomplete="off">
+<form autocomplete="off" [formGroup]="myForm">
 
     <!-- Nombre -->
     <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Nombre</label>
         <div class="col-sm-9">
             <input class="form-control"
-                   placeholder="Nombre de la persona">
-            <span class="form-text text-danger">
-                   error message
-            </span>
+                   placeholder="Nombre de la persona"
+                   formControlName = "name">
+
+            @if (formService.isValidField(myForm, 'name')) {
+              <span class="form-text text-danger">
+                {{formService.getErrorMessage(myForm, 'name')}}
+              </span>
+            }
+
         </div>
     </div>
 
@@ -22,11 +27,15 @@
 
             <div class="input-group">
                 <input class="form-control"
-                       placeholder="Agregar favorito">
+                       placeholder="Agregar favorito"
+                       [formControl]="addFavorite"
+                       (keydown.enter)="onAddToFavorites()"
+                       >
 
 
                 <button class="btn btn-outline-primary"
-                        type="button">
+                        type="button"
+                        (click)="onAddToFavorites()">
                     Agregar favorito
                 </button>
             </div>
@@ -37,23 +46,35 @@
     <!-- Lista de Juegos Favoritos -->
     <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Favoritos</label>
-        <div class="col-sm-9">
+        <div class="col-sm-9" formArrayName = "favoriteGames">
 
+          @for (favorite of favoriteGames.controls; track $index; let i = $index) {
             <div class="mb-1">
 
-                <div class="input-group">
-                    <input class="form-control">
+              <div class="input-group">
+                  <input class="form-control"
+                  [formControlName] = "i"
+                  >
 
-                    <button class="btn btn-outline-danger"
-                            type="button">
-                      Eliminar
-                  </button>
-                </div>
+                  <button class="btn btn-outline-danger"
+                          type="button"
+                          (click)="onDeleteFavorite(i)"
+                          >
+                    Eliminar
+                </button>
+              </div>
+
+              @if (formService.isValidFieldFromArray(favoriteGames, i)) {
                 <span class="form-text text-danger">
-                   Este campo es requerido
+                  {{formService.getErrorMessageFormArray(favoriteGames, i)}}
                 </span>
+              }
+
 
             </div>
+
+          }
+
 
         </div>
     </div>
@@ -77,13 +98,13 @@
 
 
 <span>Valid</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.valid| json }}</pre>
 <br>
 
 <span>Value</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.value| json }}</pre>
 <br>
 
 <span>Agregar Juego</span>
-<pre>{{ 'object' | json }}</pre>
-<pre>{{ 'object' | json }}</pre>
+<!-- <pre>{{ 'object' | json }}</pre>
+<pre>{{ 'object' | json }}</pre> -->
