--- a/src/app/country/pages/country-page/country-page.component.html
+++ b/src/app/country/pages/country-page/country-page.component.html
@@ -1,7 +1,7 @@
 <h1 class="mt-3">Selectores anidados</h1>
 <hr />
 
-<form>
+<form [formGroup]="myForm">
   <!-- Region -->
   <div class="row mb-3">
     <div class="col">
@@ -9,9 +9,13 @@
       <select formControlName="region" class="form-control">
         <option value="">-- Seleccione Continente --</option>
 
-        <!-- <option [value]="region">
-          {{ region }}
-        </option> -->
+        @for (region of regions(); track region) {
+          <option [value]="region">
+            {{ region }}
+          </option>
+
+        }
+
 
       </select>
     </div>
@@ -25,9 +29,13 @@
       <select formControlName="country" class="form-control">
         <option value="">-- Seleccione País --</option>
 
-        <!-- <option [value]="country.cca3">
-          {{ country.name }}
-        </option> -->
+        @for (country of countryByRegion(); track country.cca3) {
+          <option [value]="country.cca3">
+            {{ country.name.common }}
+          </option>
+
+        }
+
 
       </select>
     </div>
@@ -42,10 +50,12 @@
       <select formControlName="border" class="form-control">
         <option value="">-- Seleccione la frontera --</option>
 
+        @for (border of borderCountry(); track border.cca3) {
+          <option [value]="border.cca3">
+            {{ border.name.common }}
+          </option>
 
-        <!-- <option [value]="country.cca3">
-          {{ country.name }}
-        </option> -->
+        }
       </select>
     </div>
   </div>
@@ -56,4 +66,6 @@
 <code>
   <!-- {{ 'myForm.value' | json }} -->
 </code>
-<p>is form valid: {{ 'myForm.valid' }}</p>
+<p>is form valid: {{ myForm.valid }}</p>
+<p>Value: {{ myForm.value | json }}</p>
+
